# tabletexifier

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.py
docs/: api.rst  basic_interface.ipynb  conf.py  index.rst  multilines.ipynb  temp.txt
tabletexifier/: Cell.py  Table.py  __init__.py  exceptions.py  table_styles.py  utils.py
test/: test_Table_styles.py  test_basic_functions.py  test_table_styles.py
