[project]
name = "tabletexifier"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "twine>=6.0.1",
]

[dependency-groups]
dev = [
    "tabletexifier",
]

[tool.uv.sources]
tabletexifier = { workspace = true }

[tool.setuptools]
license-files = []
